fix(diamond): fix team lozenge truncation on ipad

--- a/src/app/team/team.component.scss
+++ b/src/app/team/team.component.scss
@@ -1,6 +1,6 @@
 @import '../../global';
 
-div.bl-team {
+bl-team, .bl-team {
   display: inline-block;
   border: 1px solid black;
   border-radius: 2em;
